--- a/css/axel.css
+++ b/css/axel.css
@@ -7,7 +7,7 @@
     left: 58%;
 }
 #entry_03{
-    top: 4.8%;
+    top: calc(3.8% + 10px);
     left: 83.4%;
 }
 #entry_04{
@@ -19,7 +19,7 @@
     left: 84.6%;
 }
 #entry_06{
-    top: 71.2%;
+    top: calc(72.2% - 10px);
     left: 85.4%;
 }
 #entry_07{
